# text-classifier

./: .gitignore  README.md  pyproject.toml  requirements.txt
.viz/: kedro_pipeline_events.json  stats.json
conf/base/: catalog.yml  parameters.yml
data/01_raw/: training_data.csv  training_data.parquet
scripts/: model_training_playground.py
src/: definitions.py
src/text_classifier/: __init__.py  __main__.py  embeddings.py
src/text_classifier/pipelines/category_discovery/: __init__.py  nodes.py  pipeline.py
src/text_classifier/pipelines/data_load/: pipeline.py
src/text_classifier/pipelines/data_processing/: nodes.py
src/text_classifier/pipelines/embedding_training/: __init__.py  nodes.py  pipeline.py
src/text_classifier/pipelines/model_training/: __init__.py  nodes.py  pipeline.py
text-classifier/: README.md  pyproject.toml
text-classifier/src/text_classifier/: settings.py
